--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,19 @@
-### Gradle ###
 .gradle
 build/
-
-# Ignore Gradle GUI config
 gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
-
-# Cache of project
 .gradletasknamecache
-
-### Intellij ###
 *.iml
-
-## Directory-based project format:
+/node_modules
+/src/webapp/npm-debug.log
 .idea/
-
-## File-based project format:
 *.ipr
 *.iws
-
-## Plugin-specific files:
-
-# IntelliJ
 /out/
-
-# mpeltonen/sbt-idea plugin
 .idea_modules/
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/src/webapp/dist
+/src/webapp/node_modules
