--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,20 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("com.moowork.gradle:gradle-node-plugin:0.11")
 	}
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'spring-boot' 
+apply plugin: 'spring-boot'
+apply plugin: 'com.moowork.node'
 
 jar {
 	baseName = 'potoo'
@@ -28,7 +33,6 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('com.google.guava:guava:19.0')
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.0')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
@@ -39,4 +43,32 @@ task wrapper(type: Wrapper) {
 
 task stage {
 	dependsOn build
+}
+
+npmInstall {
+	execOverrides {
+		it.workingDir = file("${project.projectDir}/src/webapp")
+	}
+}
+
+task buildWebApp(type: NpmTask, dependsOn: 'npmInstall') {
+	workingDir = file("${project.projectDir}/src/webapp")
+	args = ['run', 'build']
+}
+
+task copyWebApp(type: Copy, dependsOn: 'buildWebApp') {
+	from(file("${project.projectDir}/src/webapp/dist"))
+	into(file("${project.buildDir}/resources/main/static"))
+}
+
+bootRun.dependsOn copyWebApp
+jar.dependsOn copyWebApp
+
+node {
+	workDir = file("${project.projectDir}/src/webapp/nodejs")
+	nodeModulesDir = file("${project.projectDir}/src/webapp")
+}
+
+task cleanWebApp(type: Delete) {
+	delete 'src/webapp/dist', 'src/webapp/node_modules'
 }
