--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ bootRun.dependsOn copyWebApp
 jar.dependsOn copyWebApp
 
 node {
+	version = '5.6.0'
+	npmVersion = '3.6.0'
+	download = true
 	workDir = file("${project.projectDir}/src/webapp/nodejs")
 	nodeModulesDir = file("${project.projectDir}/src/webapp")
 }
