Introduced spring data rest and removed ws package

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.0')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
