Fix travis build requiring mongodb service

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,8 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+services:
+  - mongodb
+
 after_success:
   - ./gradlew jacocoTestReport coveralls
