--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-joda:2.6.3')
 	compile('joda-time:joda-time:2.9.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.assertj:assertj-core:3.3.0')
+	testCompile('com.jayway.jsonpath:json-path-assert:2.2.0')
 }
 
 task wrapper(type: Wrapper) {
