--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.assertj:assertj-core:3.3.0')
 	testCompile('com.jayway.jsonpath:json-path-assert:2.2.0')
+	testCompile('com.github.fakemongo:fongo:2.0.6')
+	testCompile('org.mongodb:mongo-java-driver:3.2.2')
 }
 
 task wrapper(type: Wrapper) {
