--- a/build.gradle
+++ b/build.gradle
@@ -49,11 +49,10 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-security")
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-joda:2.6.3')
 	compile('joda-time:joda-time:2.9.2')
+	compile('org.projectlombok:lombok:1.16.8')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.assertj:assertj-core:3.3.0')
 	testCompile('com.jayway.jsonpath:json-path-assert:2.2.0')
-	testCompile('com.github.fakemongo:fongo:2.0.6')
-	testCompile('org.mongodb:mongo-java-driver:3.2.2')
 }
 
 task wrapper(type: Wrapper) {
