Squashed commit of the following:
commit 68ddf5a6c833dea35d212365fc52bf8b01e8b27b
Author: George Karanikas <gkaran89@gmail.com>
Date:   Sun Apr 10 11:59:56 2016 +0300

    Started working on frontend

commit f80204f85620301c165e0a94df3414dd8aba83df
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Apr 5 00:40:05 2016 +0300

    "Fixed" some backend tests - Still need a lot to fix

commit e6eb1736f113bc814f6883918b868f80aa0ee991
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Apr 5 00:39:41 2016 +0300

    Fixed frontend (somewhat)

commit ec822c4680df5425c87bf270bbb6d3ea72408044
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Apr 5 00:39:23 2016 +0300

    Fixed backend

commit 87fec00170c3419455e5705f50fac8bb8c4e6efb
Author: George Karanikas <gkaran89@gmail.com>
Date:   Thu Mar 31 22:56:55 2016 +0300

    Several fixes including model changes and mostly security. Added JWT security

commit bb92183bd05b3bd461e627baf2e2bbb1db6b94c6
Author: George Karanikas <gkaran89@gmail.com>
Date:   Thu Mar 24 00:14:44 2016 +0200

    Fix missing dependency

commit 7adc8ffd17063095af01c1227a114e09f13e0702
Author: George Karanikas <gkaran89@gmail.com>
Date:   Wed Mar 23 23:53:57 2016 +0200

    Components restructure/creation

    - Split components to .ts, .html and .css files
    - Introduce some new components for better organization

commit 9a32661db3d22b2ca254b00bc8be1a3771f19787
Author: George Karanikas <gkaran89@gmail.com>
Date:   Wed Mar 23 23:52:51 2016 +0200

    Fix live reload and dev mode

commit e9e34c6730ec2132348f613946ffe8811538c7fd
Author: George Karanikas <gkaran89@gmail.com>
Date:   Tue Mar 22 00:36:44 2016 +0200

    Introduce basic entry page

--- a/src/webapp/package.json
+++ b/src/webapp/package.json
@@ -6,24 +6,31 @@
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
-    "build": "gulp build"
+    "build": "gulp build",
+    "bsync": "gulp browser-sync"
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
-    "systemjs": "0.19.6",
+    "angular2": "2.0.0-beta.12",
+    "angular2-moment": "^0.4.3",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "ng2-bootstrap": "^1.0.7",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
+    "rxjs": "5.0.0-beta.3",
+    "systemjs": "0.19.6",
     "zone.js": "0.5.10"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
-    "lite-server": "^1.3.1",
-    "typescript": "^1.7.3",
+    "connect-modrewrite": "^0.9.0",
+    "del": "^2.1.0",
     "gulp": "^3.9.0",
     "gulp-typescript": "^2.8.0",
-    "del": "^2.1.0"
+    "http-proxy": "^1.13.2",
+    "lite-server": "^2.1.0",
+    "proxy-middleware": "^0.15.0",
+    "run-sequence": "^1.1.5",
+    "typescript": "^1.7.3"
   }
 }
