--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 java.runtime.version=1.8
 spring.data.rest.basePath=/api
 spring.jackson.serialization.write_dates_as_timestamps=false
+jwt.secret=${JWT_SECRET}
