--- a/src/webapp/tsconfig.json
+++ b/src/webapp/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist/app",
     "target": "ES5",
     "module": "system",
     "moduleResolution": "node",
@@ -11,6 +11,9 @@
     "noImplicitAny": false
   },
   "exclude": [
-    "node_modules"
+    "gulpfile.ts",
+    "node_modules",
+    "typings/main",
+    "typings/main.d.ts"
   ]
 }
